--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
     "devDependencies": {
-        "cypress": "^5.5.0"
+        "cypress": "^5.6.0",
+        "cypress-cucumber-preprocessor": "^4.0.0",
+        "webpack": "^5.4.0"
+    },
+    "cypress-cucumber-preprocessor": {
+        "nonGlobalStepDefinitions": true
     }
 }
