Rewrite scenario as bdd style

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "cucumberautocomplete.steps": [
         "cypress/integration/common/*.js",
-        "cypress/integration/DuckDuckGo/*.js"
+        "cypress/integration/DuckDuckGo/*.js",
+        "cypress/integration/EAapp/*.js"
     ],
     "cucumberautocomplete.strictGherkinCompletion": true
 }
