--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "devDependencies": {
         "cypress": "^5.6.0",
         "cypress-cucumber-preprocessor": "^4.0.0",
+        "cypress-xpath": "^1.6.1",
         "webpack": "^5.4.0"
     },
     "cypress-cucumber-preprocessor": {
