--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
     "devDependencies": {
-        "cypress": "^6.9.0",
+        "axe-core": "^4.2.2",
+        "cypress": "^6.9.1",
+        "cypress-axe": "^0.12.2",
         "cypress-cucumber-preprocessor": "^4.1.2",
         "cypress-xpath": "^1.6.2",
         "webpack": "^5.39.1"
